# claude-master-test-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindSQLite3.cmake
include/todolist/: cli_handler.h  command_parser.h  database.h  exceptions.h  formatter.h  hello_world.h  math_utils.h  todo_item.h  todo_repository.h  version.h
src/: CMakeLists.txt  cli_handler.cpp  command_parser.cpp  database.cpp  formatter.cpp  hello_world.cpp  main.cpp  math_utils.cpp  todo_item.cpp  todo_repository.cpp
tests/: CMakeLists.txt  test_cli_handler.cpp  test_command_parser.cpp  test_database.cpp  test_hello_world.cpp  test_main.cpp  test_math_utils.cpp  test_todo_item.cpp  test_todo_repository.cpp
